--- a/website/restaurantMain.html
+++ b/website/restaurantMain.html
@@ -53,29 +53,31 @@
         <div class="pageTitle"><h2>Restaurant Activity</h2>
           <p>Let's get to work! Let us know if there are orders to deliver!</p>
         </div>
+
         <div class = "singular"> <!-- div where content goes -->
         <!-- list of open orders -->
-        
 
+        <iframe src="/rest/getOrders/" id="openOrders" style="width:70%" ></iframe><br>
         <div class = "rectangleBackground"> <!-- Restaurant Order Form -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-			<form action="/rest/newOrder" method="post" onSubmit="true refreshIframe()"> <!-- action must match route in main.js -->
-				<h1>New Order</h1>
-				<label for="username">Name</label><br>
-				<input type="text" placeholder="Enter name"  name="name" required><br> <!-- name= must match parameter in main.js, as described above -->
-				<label for="email">email address</label><br>
-				<input type="text" placeholder="Enter email"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
 
-				<label for="address">Street Address</label><br>
-				<input type="text" placeholder="Enter Street address" id="address" name="address" required><br> <!-- name= must match parameter in main.js, as described above -->
+      			<form action="/rest/newOrder" method="post" onSubmit="true refreshIframe()" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"> <!-- action must match route in main.js -->
+      				<h1>New Order</h1>
+      				<label for="username">Name</label><br>
+      				<input type="text" placeholder="Enter name"  name="name" required><br> <!-- name= must match parameter in main.js, as described above -->
+      				<label for="email">email address</label><br>
+      				<input type="text" placeholder="Enter email"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
 
-				<label for="zip">Zip Code</label><br>
-				<input type="text" placeholder="Enter Zip" id="zip" name="zip" required><br> <!-- name= must match parameter in main.js, as described above -->
+      				<label for="address">Street Address</label><br>
+      				<input type="text" placeholder="Enter Street address" id="address" name="address" required><br> <!-- name= must match parameter in main.js, as described above -->
+
+      				<label for="zip">Zip Code</label><br>
+      				<input type="text" placeholder="Enter Zip" id="zip" name="zip" required><br> <!-- name= must match parameter in main.js, as described above -->
 
 
-				<input type="submit" value="Submit">
-			</form>
+      				<input type="submit" value="Submit">
+      			</form>
         </div>
       </div> <!-- Restaurant Order Form Ends -->
 
