fixed some bugs from grader. can no longer deliver an order that hasn't been picked up

--- a/website/historyDriver.html
+++ b/website/historyDriver.html
@@ -52,7 +52,7 @@
         <div class = "singular"> <!-- div where content goes -->
           <div> <!-- history div -->
             <h3>Orders</h3>
-            <iframe id="orders" src='/driver/getOrders/' style="width:80%"></iframe>
+            <iframe id="orders" src='/driver/getAllOrders/' style="width:80%"></iframe>
 
             <div id="openOrders"></div>
 
