Fixed password form

--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -43,7 +43,7 @@
 				<input type="text" placeholder="Enter email"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
 				
 				<label for="psw">Password</label><br>
-				<input type="password" placeholder="Enter Full Name" id="psw" name="password"><br>
+				<input type="password" placeholder="Enter password" id="psw" name="password"><br>
 
 				<label for="address">Street Address</label><br>
 				<input type="text" placeholder="Enter Street address" id="address1" name="address" required><br> <!-- name= must match parameter in main.js, as described above -->
