--- a/website/driverRegister.html
+++ b/website/driverRegister.html
@@ -42,7 +42,7 @@
               <label for="fullname">Name</label><br>
               <input type=text placeholder="Enter Full Name" id="fullname" name="name" pattern="[A-Za-z]+" required><br>
               <label for="email"><b>Email</b></label><br>
-              <input type=email id="email" placeholder="Enter Email" name="email"  required><br>
+              <input type=email id="email" placeholder="Enter Email" name="email"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required><br>
               <label for="psw"><b>Password</b></label><br>
               <input type=password id="psw" placeholder="Enter Password" name="psw" required><br>
               <label for="phone">Phone Number</label><br>
