--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -46,13 +46,16 @@
 				<input type="password" placeholder="Enter password" id="psw" name="password"><br>
 
 				<label for="address">Street Address</label><br>
-				<input type="text" placeholder="Enter Street address" id="address1" name="address" required><br> <!-- name= must match parameter in main.js, as described above -->
+				<input type="text" placeholder="Enter Street address" id="address1" name="address" pattern="^(\d{1,})\s?(\w{0,5})\s([a-zA-Z]{2,40})\s([a-zA-Z]{2,15})\.?\s?(\w{0,5})$" oninvalid="setCustomValidity('Must enter street address')" required><br> <!-- name= must match parameter in main.js, as described above -->
+
+       				<label for="city">City</label><br>
+       				<input type="text" placeholder="Enter city"  name="city" pattern="^(san jose|San Jose)$" oninvalid="setCustomValidity('Must be in San Jose')" required><br>
 
 				<label for="zip">Zip Code</label><br>
-				<input type="text" placeholder="Enter 5-Digit Zip" id='zip1' name="zip" pattern="[0-9]{5}" required><br> <!-- name= must match parameter in main.js, as described above -->
+				<input type="text" placeholder="Enter 5-Digit Zip" id='zip1' name="zip" pattern="^(9510[1-9]|^951[1-3][0-9]|^95141$|^95148$|^9515[0-9]|^9516[0-4]|^95170$|^95172$|^95173$|^9519[0-6])$"  oninvalid="setCustomValidity('Must enter San Jose Zip Code')" required><br> <!-- name= must match parameter in main.js, as described above -->
 
 				<label for="phone">Phone</label><br>
-				<input type="text" placeholder="Enter Phone"  name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required><br> <!-- name= must match parameter in main.js, as described above -->
+				<input type="text" placeholder="Enter Phone"  name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" oninvalid="setCustomValidity('Must be in xxx-xxx-xxxx format.')" required><br> <!-- name= must match parameter in main.js, as described above -->
 
 				<input type="submit" value="Submit">
 			</form>
